Created page with "# Existuje několik způsobů, jak tento nástroj spustit: #* Stiskněte tlačítko {{Button|[[Image:Sketcher_CreatePolyline.svg|16px]] [[Sketcher_CreatePolyline|Lomená čára]]}}. #* V menu vyberte možnost {{MenuCommand|Skica → Geometrie náčrtu → [[Image:Sketcher_CreatePolyline.svg|16px]] Vytvořit lomenou čáru}}. #* Klikněte pravým tlačítkem myši ve [[3D_View|3D pohledu]] a z kontextového menu vyberte možnost {{MenuCommand|Image:Sketcher_CreatePolyli..."

--- a/wiki/cs/Sketcher_CreatePolyline.html
+++ b/wiki/cs/Sketcher_CreatePolyline.html
@@ -9,7 +9,7 @@
 <li><a href="../pt-br/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--med" title="Polilinha (linha de m&uacute;ltiplos pontos) (20% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--med" title="Sketcher: Polilinie (20% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher CreatePolyline/sv (10% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100; &#1083;&#1080;&#1085;&#1080;&#1102; &#1087;&#1086; &#1090;&#1086;&#1095;&#1082;&#1072;&#1084; (&#1087;&#1086;&#1083;&#1080;&#1083;&#1080;&#1085;&#1080;&#1102;) (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_CreatePolyline.html" class="mw-pt-progress mw-pt-progress--complete" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#12509;&#12522;&#12521;&#12452;&#12531;&#12434;&#20316;&#25104; (100% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="docnav">
@@ -70,32 +70,32 @@
 <h2><span id="Pou.C5.BEit.C3.AD"></span><span class="mw-headline" id="Pou&#382;it&iacute;">Pou&#382;it&iacute;</span></h2>
 <p>Viz tak&eacute;: <a href="../Sketcher_Workbench.html#Drawing_aids" title="Sketcher Workbench">Pom&#367;cky pro kreslen&iacute;</a>.
 </p>
-<ol><li>There are several ways to invoke the tool:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a></span> button.</li>
-<li>Select the <b>Sketch &rarr; Geometries &rarr; <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Polyline</b> option from the menu.</li>
-<li>Right-click in the <a href="../3D_View.html" title="3D View">3D View</a> and select the <b><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Polyline</b> option from the context menu.</li>
-<li>Use the keyboard shortcut: <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">G</span> then <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">M</span>.</li></ul></li>
-<li>The cursor changes to a cross with the tool icon.</li>
-<li>The modes of the tool require a previous segment. Do one of the following:
-<ul><li>Pick two points to define a line segment.</li>
-<li>Pick the endpoint of an existing line or arc segment (<a href="../Sketcher_Workbench.html#Auto_constraints" title="Sketcher Workbench">Auto constraints</a> must be enabled).</li></ul></li>
-<li>Optionally press the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">M</span> key one or more times to cycle through the modes for the next segment. The available modes are:
-<ul><li>Line perpendicular to the previous segment.</li>
-<li>Line tangential to the previous segment (this is the initial mode if the previous segment is an arc).</li>
-<li>Arc tangential to the previous segment.</li>
-<li>Arc perpendicular (left) to the previous segment.</li>
-<li>Arc perpendicular (right) to the previous segment.</li>
-<li>Line only connected to the previous segment.</li></ul></li>
-<li>While in any of the arc modes, optionally hold down the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> key to snap the arc to increments of 45&deg; relative to the previous segment.</li>
-<li>Pick the endpoint of the segment.</li>
-<li>Optionally repeat this to create more segments.</li>
-<li>To finish the input do one of the following:
-<ul><li>Snap to the start point to create a closed polyline.</li>
-<li>Right-click or press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> to create an open polyline.</li></ul></li>
-<li>The polyline segments have been created and applicable constraints have been added.</li>
-<li>If the tool runs in <a href="../Sketcher_Workbench.html#Continue_modes" title="Sketcher Workbench">continue mode</a>:
-<ol><li>Optionally keep creating polylines.</li>
-<li>To finish, right-click or press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, or start another geometry or constraint creation tool.</li></ol></li></ol>
+<ol><li>Existuje n&#283;kolik zp&#367;sob&#367;, jak tento n&aacute;stroj spustit:
+<ul><li>Stiskn&#283;te tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Lomen&aacute; &#269;&aacute;ra</a></span>.</li>
+<li>V menu vyberte mo&#382;nost <b>Skica &rarr; Geometrie n&aacute;&#269;rtu &rarr; <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vytvo&#345;it lomenou &#269;&aacute;ru</b>.</li>
+<li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i ve <a href="../3D_View.html" title="3D View">3D pohledu</a> a z kontextov&eacute;ho menu vyberte mo&#382;nost <b><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vytvo&#345;it lomenou &#269;&aacute;ru</b>.</li>
+<li>Pou&#382;ijte kl&aacute;vesovou zkratku: <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">G</span> a pot&eacute; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">M</span>.</li></ul></li>
+<li>Kurzor se zm&#283;n&iacute; na k&#345;&iacute;&#382;ek s ikonou n&aacute;stroje.</li>
+<li>Re&#382;imy n&aacute;stroje vy&#382;aduj&iacute; p&#345;edchoz&iacute; segment. Prove&#271;te jednu z n&aacute;sleduj&iacute;c&iacute;ch akc&iacute;:
+<ul><li>Vyberte dva body, kter&eacute; definuj&iacute; &uacute;se&#269;ku.</li>
+<li>Vyberte koncov&yacute; bod existuj&iacute;c&iacute; &uacute;se&#269;ky nebo oblouku (mus&iacute; b&yacute;t povolena funkce <a href="../Sketcher_Workbench.html#Auto_constraints" title="Sketcher Workbench">Automatick&eacute; vazby</a>).</li></ul></li>
+<li>Voliteln&#283; stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">M</span> jednou nebo v&iacute;cekr&aacute;t, abyste p&#345;ep&iacute;nali mezi re&#382;imy pro dal&scaron;&iacute; segment. Dostupn&eacute; re&#382;imy jsou:
+<ul><li>P&#345;&iacute;mka kolm&aacute; k p&#345;edchoz&iacute;mu &uacute;seku.</li>
+<li>P&#345;&iacute;mka te&#269;n&aacute; k p&#345;edchoz&iacute;mu segmentu (toto je v&yacute;choz&iacute; re&#382;im, pokud je p&#345;edchoz&iacute; segment oblouk).</li>
+<li>Oblouk te&#269;n&yacute; k p&#345;edchoz&iacute;mu segmentu.</li>
+<li>Oblouk kolm&yacute; (vlevo) k p&#345;edchoz&iacute;mu segmentu.</li>
+<li>Oblouk kolm&yacute; (vpravo) k p&#345;edchoz&iacute;mu segmentu.</li>
+<li>P&#345;&iacute;mka pouze p&#345;ipojen&aacute; k p&#345;edchoz&iacute;mu segmentu.</li></ul></li>
+<li>V kter&eacute;mkoli z re&#382;im&#367; oblouku m&#367;&#382;ete voliteln&#283; podr&#382;et kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>, aby se oblouk p&#345;ichytil v kroc&iacute;ch po 45&deg; vzhledem k p&#345;edchoz&iacute;mu segmentu.</li>
+<li>Vyberte koncov&yacute; bod segmentu.</li>
+<li>Tento postup m&#367;&#382;ete opakovat, abyste vytvo&#345;ili v&iacute;ce segment&#367;.</li>
+<li>Chcete-li zad&aacute;v&aacute;n&iacute; dokon&#269;it, prove&#271;te jednu z n&aacute;sleduj&iacute;c&iacute;ch akc&iacute;:
+<ul><li>P&#345;ichy&#357;te k po&#269;&aacute;te&#269;n&iacute;mu bodu a vytvo&#345;te uzav&#345;enou k&#345;ivku.</li>
+<li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i nebo stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, abyste vytvo&#345;ili otev&#345;enou k&#345;ivku.</li></ul></li>
+<li>Byly vytvo&#345;eny segmenty k&#345;ivek a p&#345;idany p&#345;&iacute;slu&scaron;n&eacute; vazby.</li>
+<li>Pokud n&aacute;stroj b&#283;&#382;&iacute; v <a href="../Sketcher_Workbench.html#Continue_modes" title="Sketcher Workbench">re&#382;imu pokra&#269;ov&aacute;n&iacute;</a>:
+<ol><li>Voliteln&#283; pokra&#269;ujte ve vytv&aacute;&#345;en&iacute; k&#345;ivek.</li>
+<li>Chcete-li dokon&#269;it, klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i nebo stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> nebo spus&#357;te jin&yacute; n&aacute;stroj pro vytv&aacute;&#345;en&iacute; geometrie nebo vazby.</li></ol></li></ol>
 <p><br>
 </p>
 <div class="docnav">
@@ -141,35 +141,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122134226
+Cached time: 20260122140640
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.232 seconds
 Preprocessor visited node count: 391/1000000
-Post&#8208;expand include size: 27795/2097152 bytes
-Template argument size: 10566/2097152 bytes
+Post&#8208;expand include size: 27840/2097152 bytes
+Template argument size: 10611/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2754/5000000 bytes
+Unstrip post&#8208;expand size: 2758/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.393      1 -total
- 30.74%    6.576      1 Template:Sketcher_Tools_navi/cs
- 20.85%    4.461      1 Template:GuiCommand
- 20.02%    4.282      2 Template:Navigation_menu_2
- 16.65%    3.562      1 Template:Userdocnavi/cs
-  9.32%    1.993      2 Template:Docnav
-  6.68%    1.430      8 Template:KEY
-  6.64%    1.420      1 Template:Caption
-  5.77%    1.235      2 Template:MenuCommand
-  5.68%    1.215      1 Template:Button
+100.00%   52.511      1 -total
+ 29.85%   15.672      1 Template:Sketcher_Tools_navi/cs
+ 21.03%   11.041      1 Template:GuiCommand
+ 20.34%   10.679      1 Template:Userdocnavi/cs
+ 14.69%    7.713      2 Template:Navigation_menu_2
+  9.34%    4.907      1 Template:Caption
+  9.31%    4.887      2 Template:Docnav
+  4.84%    2.543      8 Template:KEY
+  4.15%    2.179      1 Template:Button
+  3.89%    2.041      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122134226 and revision id 1742377. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122140640 and revision id 1742379. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
