--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -11,7 +11,7 @@
 <li><a href="../ru/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--high" title="&#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; (77% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#35373;&#23450; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">Switch Virtual Space</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">P&#345;ep&iacute;n&aacute;n&iacute; virtu&aacute;ln&iacute;ho prostoru</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -434,15 +434,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122141143
+Cached time: 20260122141253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.161 seconds
-Real time usage: 0.244 seconds
+CPU time usage: 0.163 seconds
+Real time usage: 0.242 seconds
 Preprocessor visited node count: 1225/1000000
-Post&#8208;expand include size: 29894/2097152 bytes
-Template argument size: 11562/2097152 bytes
+Post&#8208;expand include size: 29942/2097152 bytes
+Template argument size: 11594/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -450,19 +450,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.233      1 -total
- 17.68%   12.420      1 Template:Sketcher_Tools_navi/cs
- 12.90%    9.059      1 Template:Userdocnavi/cs
- 11.01%    7.730      2 Template:Navigation_menu_2
- 10.46%    7.348      3 Template:PropertyView
-  8.44%    5.931     96 Template:MenuCommand
-  7.97%    5.598      1 Template:Value
-  4.81%    3.380     19 Template:Version
-  4.52%    3.178      3 Template:Variable
-  4.46%    3.135      2 Template:Caption
+100.00%   63.500      1 -total
+ 17.04%   10.822      1 Template:Sketcher_Tools_navi/cs
+ 12.23%    7.768      2 Template:Navigation_menu_2
+ 10.93%    6.941      3 Template:PropertyView
+  8.72%    5.538     96 Template:MenuCommand
+  8.61%    5.468      1 Template:Userdocnavi/cs
+  7.09%    4.504      1 Template:Value
+  5.47%    3.476      2 Template:Docnav
+  5.28%    3.352      3 Template:Variable
+  4.87%    3.091      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122141143 and revision id 1742381. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122141253 and revision id 1742383. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
