--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -393,7 +393,7 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">Switch Virtual Space</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Sketcher_SwitchVirtualSpace.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Sketcher_SwitchVirtualSpace.html" title="Sketcher SwitchVirtualSpace">P&#345;ep&iacute;n&aacute;n&iacute; virtu&aacute;ln&iacute;ho prostoru</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -434,15 +434,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122141253
+Cached time: 20260122141305
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.163 seconds
-Real time usage: 0.242 seconds
+CPU time usage: 0.177 seconds
+Real time usage: 0.367 seconds
 Preprocessor visited node count: 1225/1000000
-Post&#8208;expand include size: 29942/2097152 bytes
-Template argument size: 11594/2097152 bytes
+Post&#8208;expand include size: 29990/2097152 bytes
+Template argument size: 11626/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -450,19 +450,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.500      1 -total
- 17.04%   10.822      1 Template:Sketcher_Tools_navi/cs
- 12.23%    7.768      2 Template:Navigation_menu_2
- 10.93%    6.941      3 Template:PropertyView
-  8.72%    5.538     96 Template:MenuCommand
-  8.61%    5.468      1 Template:Userdocnavi/cs
-  7.09%    4.504      1 Template:Value
-  5.47%    3.476      2 Template:Docnav
-  5.28%    3.352      3 Template:Variable
-  4.87%    3.091      2 Template:Caption
+100.00%   99.320      1 -total
+ 18.54%   18.417      1 Template:Sketcher_Tools_navi/cs
+ 12.36%   12.278      1 Template:Value
+ 11.35%   11.275      1 Template:Userdocnavi/cs
+ 10.45%   10.377     96 Template:MenuCommand
+  8.03%    7.973      3 Template:PropertyView
+  7.94%    7.887      2 Template:Navigation_menu_2
+  6.86%    6.814      2 Template:Caption
+  5.70%    5.661      1 Template:Incode
+  4.13%    4.098      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122141253 and revision id 1742383. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122141305 and revision id 1742385. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
