Created page with "K dispozici jsou čtyři stránky: [[#Obecné|Obecné]], [[#Mřížka|Mřížka]], [[#Zobrazení|Zobrazení]] a [[#Vzhled|Vzhled]]."

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -21,7 +21,7 @@
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>P&#345;edvolby pro <span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plochu Sketcher</a> najdete v <a href="../Preferences_Editor.html" title="Preferences Editor">Editoru p&#345;edvoleb</a>. V menu vyberte <b>Upravit &rarr; Nastaven&iacute;</b> a pot&eacute; <b><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> N&aacute;&#269;rt</b>. Tato skupina je k dispozici pouze v p&#345;&iacute;pad&#283;, &#382;e byla v aktu&aacute;ln&iacute; relaci FreeCADu na&#269;tena pracovn&iacute; plocha Sketcher.
-</p><p>There are four pages: <a href="#General">General</a>, <a href="#Grid">Grid</a>, <a href="#Display">Display</a> and <a href="#Appearance">Appearance</a>.
+</p><p>K dispozici jsou &#269;ty&#345;i str&aacute;nky: <a href="#Obecn%C3%A9">Obecn&eacute;</a>, <a href="#M%C5%99%C3%AD%C5%BEka">M&#345;&iacute;&#382;ka</a>, <a href="#Zobrazen%C3%AD">Zobrazen&iacute;</a> a <a href="#Vzhled">Vzhled</a>.
 </p><p>Some advanced preferences can only be changed in the <a href="../Std_DlgParameter.html" title="Std DlgParameter">Parameter editor</a>. See <a href="../Fine-tuning.html#Sketcher_Workbench" title="Fine-tuning">Fine-tuning</a>.
 </p><p>In <span style="font-size:small;color:blue;">0.21 and below</span> the <a href="#Appearance">Appearance</a> page is labeled "Colors".
 </p>
@@ -436,12 +436,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122141847
+Cached time: 20260122142042
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.324 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.199 seconds
 Preprocessor visited node count: 1226/1000000
 Post&#8208;expand include size: 29991/2097152 bytes
 Template argument size: 11627/2097152 bytes
@@ -452,19 +452,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.933      1 -total
- 19.56%   12.504      1 Template:Sketcher_Tools_navi/cs
- 14.88%    9.513      1 Template:Userdocnavi/cs
- 14.68%    9.383      2 Template:Caption
- 11.23%    7.183      2 Template:Navigation_menu_2
- 11.15%    7.131      3 Template:PropertyView
-  8.51%    5.442      3 Template:Variable
-  5.92%    3.785     96 Template:MenuCommand
-  4.69%    2.996      1 Template:Value
-  3.66%    2.337      2 Template:Docnav
+100.00%   34.721      1 -total
+ 17.60%    6.110      1 Template:Sketcher_Tools_navi/cs
+ 12.51%    4.343      2 Template:Navigation_menu_2
+ 11.04%    3.832      1 Template:Userdocnavi/cs
+  9.04%    3.137     96 Template:MenuCommand
+  8.63%    2.996      1 Template:Value
+  8.47%    2.941      3 Template:PropertyView
+  5.65%    1.961     19 Template:Version
+  5.48%    1.904      2 Template:Caption
+  5.04%    1.751      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122141847 and revision id 1742389. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142042 and revision id 1742391. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
