--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -7,7 +7,7 @@
 <li><a href="../it/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--complete" title="Preferenze di Sketcher (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Ustawienia (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="Prefer&ecirc;ncias (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--high" title="&#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; (77% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Preferences.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#35373;&#23450; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div class="docnav">
@@ -22,7 +22,7 @@
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>P&#345;edvolby pro <span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plochu Sketcher</a> najdete v <a href="../Preferences_Editor.html" title="Preferences Editor">Editoru p&#345;edvoleb</a>. V menu vyberte <b>Upravit &rarr; Nastaven&iacute;</b> a pot&eacute; <b><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> N&aacute;&#269;rt</b>. Tato skupina je k dispozici pouze v p&#345;&iacute;pad&#283;, &#382;e byla v aktu&aacute;ln&iacute; relaci FreeCADu na&#269;tena pracovn&iacute; plocha Sketcher.
 </p><p>K dispozici jsou &#269;ty&#345;i str&aacute;nky: <a href="#Obecn%C3%A9">Obecn&eacute;</a>, <a href="#M%C5%99%C3%AD%C5%BEka">M&#345;&iacute;&#382;ka</a>, <a href="#Zobrazen%C3%AD">Zobrazen&iacute;</a> a <a href="#Vzhled">Vzhled</a>.
-</p><p>Some advanced preferences can only be changed in the <a href="../Std_DlgParameter.html" title="Std DlgParameter">Parameter editor</a>. See <a href="../Fine-tuning.html#Sketcher_Workbench" title="Fine-tuning">Fine-tuning</a>.
+</p><p>N&#283;kter&eacute; pokro&#269;il&eacute; p&#345;edvolby lze zm&#283;nit pouze v <a href="../Std_DlgParameter.html" title="Std DlgParameter">editoru parametr&#367;</a>. Viz <a href="../Fine-tuning.html#Sketcher_Workbench" title="Fine-tuning">Jemn&eacute; dolad&#283;n&iacute;</a>.
 </p><p>In <span style="font-size:small;color:blue;">0.21 and below</span> the <a href="#Appearance">Appearance</a> page is labeled "Colors".
 </p>
 <h2><span class="mw-headline" id="General">General</span></h2>
@@ -436,12 +436,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122142042
+Cached time: 20260122142116
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.199 seconds
+CPU time usage: 0.126 seconds
+Real time usage: 0.194 seconds
 Preprocessor visited node count: 1226/1000000
 Post&#8208;expand include size: 29991/2097152 bytes
 Template argument size: 11627/2097152 bytes
@@ -452,19 +452,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.721      1 -total
- 17.60%    6.110      1 Template:Sketcher_Tools_navi/cs
- 12.51%    4.343      2 Template:Navigation_menu_2
- 11.04%    3.832      1 Template:Userdocnavi/cs
-  9.04%    3.137     96 Template:MenuCommand
-  8.63%    2.996      1 Template:Value
-  8.47%    2.941      3 Template:PropertyView
-  5.65%    1.961     19 Template:Version
-  5.48%    1.904      2 Template:Caption
-  5.04%    1.751      2 Template:Docnav
+100.00%   47.188      1 -total
+ 21.79%   10.282      1 Template:Sketcher_Tools_navi/cs
+ 11.48%    5.416      2 Template:Navigation_menu_2
+ 10.19%    4.809      1 Template:Userdocnavi/cs
+ 10.07%    4.751      3 Template:PropertyView
+  9.41%    4.441     96 Template:MenuCommand
+  7.30%    3.445      1 Template:Value
+  6.06%    2.861      2 Template:Docnav
+  4.62%    2.178      3 Template:Variable
+  4.49%    2.121      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142042 and revision id 1742391. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142116 and revision id 1742393. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
