--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -23,7 +23,7 @@
 <p>P&#345;edvolby pro <span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plochu Sketcher</a> najdete v <a href="../Preferences_Editor.html" title="Preferences Editor">Editoru p&#345;edvoleb</a>. V menu vyberte <b>Upravit &rarr; Nastaven&iacute;</b> a pot&eacute; <b><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> N&aacute;&#269;rt</b>. Tato skupina je k dispozici pouze v p&#345;&iacute;pad&#283;, &#382;e byla v aktu&aacute;ln&iacute; relaci FreeCADu na&#269;tena pracovn&iacute; plocha Sketcher.
 </p><p>K dispozici jsou &#269;ty&#345;i str&aacute;nky: <a href="#Obecn%C3%A9">Obecn&eacute;</a>, <a href="#M%C5%99%C3%AD%C5%BEka">M&#345;&iacute;&#382;ka</a>, <a href="#Zobrazen%C3%AD">Zobrazen&iacute;</a> a <a href="#Vzhled">Vzhled</a>.
 </p><p>N&#283;kter&eacute; pokro&#269;il&eacute; p&#345;edvolby lze zm&#283;nit pouze v <a href="../Std_DlgParameter.html" title="Std DlgParameter">editoru parametr&#367;</a>. Viz <a href="../Fine-tuning.html#Sketcher_Workbench" title="Fine-tuning">Jemn&eacute; dolad&#283;n&iacute;</a>.
-</p><p>In <span style="font-size:small;color:blue;">0.21 and below</span> the <a href="#Appearance">Appearance</a> page is labeled "Colors".
+</p><p>Ve verzi <span style="font-size:small;color:blue;">0.21 and below</span> je str&aacute;nka <a href="#Appearance">Vzhled</a> ozna&#269;ena jako "Barvy".
 </p>
 <h2><span class="mw-headline" id="General">General</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_General.png&amp;filetimestamp=20250107094706&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_General.png" decoding="async" width="400" height="329" class="mw-file-element" data-file-width="612" data-file-height="503"></a></span>
@@ -436,12 +436,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122142116
+Cached time: 20260122142202
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.194 seconds
+CPU time usage: 0.167 seconds
+Real time usage: 0.233 seconds
 Preprocessor visited node count: 1226/1000000
 Post&#8208;expand include size: 29991/2097152 bytes
 Template argument size: 11627/2097152 bytes
@@ -452,19 +452,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.188      1 -total
- 21.79%   10.282      1 Template:Sketcher_Tools_navi/cs
- 11.48%    5.416      2 Template:Navigation_menu_2
- 10.19%    4.809      1 Template:Userdocnavi/cs
- 10.07%    4.751      3 Template:PropertyView
-  9.41%    4.441     96 Template:MenuCommand
-  7.30%    3.445      1 Template:Value
-  6.06%    2.861      2 Template:Docnav
-  4.62%    2.178      3 Template:Variable
-  4.49%    2.121      1 Template:Button
+100.00%   59.388      1 -total
+ 13.61%    8.085      1 Template:Sketcher_Tools_navi/cs
+ 10.69%    6.348      1 Template:Userdocnavi/cs
+ 10.43%    6.192      3 Template:PropertyView
+  9.54%    5.666      2 Template:Navigation_menu_2
+  8.48%    5.038     96 Template:MenuCommand
+  7.48%    4.444      1 Template:Value
+  7.37%    4.377      2 Template:Docnav
+  6.42%    3.815     19 Template:Version
+  5.91%    3.511      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142116 and revision id 1742393. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142202 and revision id 1742395. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
