--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -24,8 +24,9 @@
 </p><p>K dispozici jsou &#269;ty&#345;i str&aacute;nky: <a href="#Obecn%C3%A9">Obecn&eacute;</a>, <a href="#M%C5%99%C3%AD%C5%BEka">M&#345;&iacute;&#382;ka</a>, <a href="#Zobrazen%C3%AD">Zobrazen&iacute;</a> a <a href="#Vzhled">Vzhled</a>.
 </p><p>N&#283;kter&eacute; pokro&#269;il&eacute; p&#345;edvolby lze zm&#283;nit pouze v <a href="../Std_DlgParameter.html" title="Std DlgParameter">editoru parametr&#367;</a>. Viz <a href="../Fine-tuning.html#Sketcher_Workbench" title="Fine-tuning">Jemn&eacute; dolad&#283;n&iacute;</a>.
 </p><p>Ve verzi <span style="font-size:small;color:blue;">0.21 and below</span> je str&aacute;nka <a href="#Appearance">Vzhled</a> ozna&#269;ena jako "Barvy".
+</p><p><span id="General"></span>
 </p>
-<h2><span class="mw-headline" id="General">General</span></h2>
+<h2><span id="Obecn.C3.A9"></span><span class="mw-headline" id="Obecn&eacute;">Obecn&eacute;</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_General.png&amp;filetimestamp=20250107094706&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_General.png" decoding="async" width="400" height="329" class="mw-file-element" data-file-width="612" data-file-height="503"></a></span>
 </p><p>On this page you can specify the following:
 </p>
@@ -436,13 +437,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122142202
+Cached time: 20260122142249
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.167 seconds
-Real time usage: 0.233 seconds
-Preprocessor visited node count: 1226/1000000
+CPU time usage: 0.129 seconds
+Real time usage: 0.165 seconds
+Preprocessor visited node count: 1227/1000000
 Post&#8208;expand include size: 29991/2097152 bytes
 Template argument size: 11627/2097152 bytes
 Highest expansion depth: 7/100
@@ -452,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.388      1 -total
- 13.61%    8.085      1 Template:Sketcher_Tools_navi/cs
- 10.69%    6.348      1 Template:Userdocnavi/cs
- 10.43%    6.192      3 Template:PropertyView
-  9.54%    5.666      2 Template:Navigation_menu_2
-  8.48%    5.038     96 Template:MenuCommand
-  7.48%    4.444      1 Template:Value
-  7.37%    4.377      2 Template:Docnav
-  6.42%    3.815     19 Template:Version
-  5.91%    3.511      3 Template:Variable
+100.00%   38.774      1 -total
+ 18.80%    7.288      1 Template:Sketcher_Tools_navi/cs
+ 17.92%    6.947      2 Template:Navigation_menu_2
+ 16.94%    6.570      1 Template:Userdocnavi/cs
+  8.79%    3.410     96 Template:MenuCommand
+  7.80%    3.025      3 Template:PropertyView
+  5.30%    2.056      2 Template:Docnav
+  5.16%    2.002      1 Template:Value
+  5.06%    1.962      1 Template:TOCright
+  4.41%    1.711     19 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142202 and revision id 1742395. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142248 and revision id 1742397. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
