--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -437,12 +437,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122142249
+Cached time: 20260122142256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.129 seconds
-Real time usage: 0.165 seconds
+CPU time usage: 0.138 seconds
+Real time usage: 0.171 seconds
 Preprocessor visited node count: 1227/1000000
 Post&#8208;expand include size: 29991/2097152 bytes
 Template argument size: 11627/2097152 bytes
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.774      1 -total
- 18.80%    7.288      1 Template:Sketcher_Tools_navi/cs
- 17.92%    6.947      2 Template:Navigation_menu_2
- 16.94%    6.570      1 Template:Userdocnavi/cs
-  8.79%    3.410     96 Template:MenuCommand
-  7.80%    3.025      3 Template:PropertyView
-  5.30%    2.056      2 Template:Docnav
-  5.16%    2.002      1 Template:Value
-  5.06%    1.962      1 Template:TOCright
-  4.41%    1.711     19 Template:Version
+100.00%   49.949      1 -total
+ 16.78%    8.380      1 Template:Userdocnavi/cs
+ 14.17%    7.076      1 Template:Sketcher_Tools_navi/cs
+ 10.21%    5.102      2 Template:Navigation_menu_2
+ 10.11%    5.050      3 Template:PropertyView
+  9.13%    4.561     96 Template:MenuCommand
+  7.60%    3.798      1 Template:Value
+  5.68%    2.838      3 Template:Variable
+  5.40%    2.696      2 Template:Docnav
+  4.49%    2.242      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142248 and revision id 1742397. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142256 and revision id 1742397. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
