Created page with "Na této stránce můžete zadat následující hodnoty:"

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -28,7 +28,7 @@
 </p>
 <h2><span id="Obecn.C3.A9"></span><span class="mw-headline" id="Obecn&eacute;">Obecn&eacute;</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=Preferences_Sketcher_Page_General.png&amp;filetimestamp=20250107094706&amp;.html" class="mw-file-description"><img src="../File/Preferences_Sketcher_Page_General.png" decoding="async" width="400" height="329" class="mw-file-element" data-file-width="612" data-file-height="503"></a></span>
-</p><p>On this page you can specify the following:
+</p><p>Na t&eacute;to str&aacute;nce m&#367;&#382;ete zadat n&aacute;sleduj&iacute;c&iacute; hodnoty:
 </p>
 <table class="wikitable float-right mw-collapsible mw-uncollapsed">
 <tbody><tr>
@@ -437,12 +437,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122142256
+Cached time: 20260122142713
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.171 seconds
+CPU time usage: 0.140 seconds
+Real time usage: 0.215 seconds
 Preprocessor visited node count: 1227/1000000
 Post&#8208;expand include size: 29991/2097152 bytes
 Template argument size: 11627/2097152 bytes
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.949      1 -total
- 16.78%    8.380      1 Template:Userdocnavi/cs
- 14.17%    7.076      1 Template:Sketcher_Tools_navi/cs
- 10.21%    5.102      2 Template:Navigation_menu_2
- 10.11%    5.050      3 Template:PropertyView
-  9.13%    4.561     96 Template:MenuCommand
-  7.60%    3.798      1 Template:Value
-  5.68%    2.838      3 Template:Variable
-  5.40%    2.696      2 Template:Docnav
-  4.49%    2.242      1 Template:Button
+100.00%   54.880      1 -total
+ 15.00%    8.232      1 Template:Sketcher_Tools_navi/cs
+ 10.20%    5.599      3 Template:PropertyView
+  9.99%    5.481     96 Template:MenuCommand
+  8.48%    4.656      2 Template:Navigation_menu_2
+  8.21%    4.503      1 Template:Userdocnavi/cs
+  6.63%    3.639      2 Template:Docnav
+  5.92%    3.247      1 Template:Value
+  5.60%    3.075      1 Template:VersionMinus
+  5.50%    3.016     19 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142256 and revision id 1742397. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122142713 and revision id 1742400. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
