--- a/wiki/it/Macro_Snip.html
+++ b/wiki/it/Macro_Snip.html
@@ -1,11 +1,11 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Snip/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Snip&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Snip (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Bildschirmfoto (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Snip.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Snip (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Snip (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Wycinek (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--low" title="Macro de Corte (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><a href="../ru/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--high" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; Snip (&#1054;&#1073;&#1088;&#1077;&#1079;&#1072;&#1090;&#1100;) (96% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
+<li><a href="../ru/Macro_Snip.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; Snip (&#1054;&#1073;&#1088;&#1077;&#1079;&#1072;&#1090;&#1100;) (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -82,12 +82,8 @@ Su Linux: gnone-screenshot utility<br>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Usare questa macro per pubblicare facilmente screenshot nel <a rel="nofollow" class="external text" href="https://forum.freecad.org">forum di FreeCAD</a>.
 </p><p>Si pu&ograve; aggiungere questa macro alla barra degli strumenti delle macro personalizzate globali per un accesso rapido e semplice.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Quando si pubblica sul forum di FreeCAD spesso &egrave; utile poter includere delle schermate. Questa macro serve a semplificare un po' questo lavoro.
-</p>
-</div>
-<p><span id="Usage"></span>
+</p><p>Quando si pubblica sul forum di FreeCAD, spesso &egrave; utile poter includere degli screenshot. Il problema &egrave; che si tratta di un compito un po' noioso. Questa macro mira quindi a semplificare un po' il compito.
+</p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
@@ -565,34 +561,34 @@ if not userCanceled:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251009170257
+Cached time: 20260122144258
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 275/1000000
+CPU time usage: 0.057 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 274/1000000
 Post&#8208;expand include size: 7462/2097152 bytes
 Template argument size: 18955/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 18809/5000000 bytes
+Unstrip post&#8208;expand size: 18824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.209      1 -total
- 18.04%    2.203      2 Template:Caption
- 17.13%    2.092      1 Template:Macro/it
- 13.68%    1.670      1 Template:MenuCommand
- 12.71%    1.552     13 Template:Incode
- 10.31%    1.259      1 Template:MacroCode
-  9.08%    1.109      1 Template:Button
-  8.87%    1.083      1 Template:FileName
-  8.77%    1.071      6 Template:KEY
+100.00%   33.463      1 -total
+ 34.28%   11.470      2 Template:Caption
+ 16.81%    5.626      1 Template:MenuCommand
+ 14.85%    4.970      1 Template:Macro/it
+ 11.93%    3.992      1 Template:MacroCode
+  7.85%    2.626     13 Template:Incode
+  5.48%    1.834      1 Template:Button
+  3.73%    1.247      6 Template:KEY
+  3.38%    1.131      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20251009170257 and revision id 1659305. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144258 and revision id 1742402. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
