--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -70,7 +70,7 @@
 <td><b>Sjednotit toto&#382;nost a bod na objektu</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
 <td>Pokud je za&scaron;krtnuto, n&aacute;stroje <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazba shodnosti</a> a <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">vazba bodu na objektu</a> jsou sjednoceny do <a href="../Sketcher_ConstrainCoincidentUnified.html" title="Sketcher ConstrainCoincidentUnified">jedin&eacute;ho n&aacute;stroje</a>.
-<p><i>After changing this preference you must restart FreeCAD.</i>
+<p><i>Po zm&#283;n&#283; tohoto nastaven&iacute; mus&iacute;te FreeCAD restartovat.</i>
 </p>
 </td></tr>
 <tr>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122144417
+Cached time: 20260122144510
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.144 seconds
-Real time usage: 0.230 seconds
+CPU time usage: 0.142 seconds
+Real time usage: 0.371 seconds
 Preprocessor visited node count: 1227/1000000
-Post&#8208;expand include size: 30011/2097152 bytes
-Template argument size: 11647/2097152 bytes
+Post&#8208;expand include size: 30012/2097152 bytes
+Template argument size: 11648/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   61.428      1 -total
- 22.69%   13.938      1 Template:Sketcher_Tools_navi/cs
- 10.20%    6.263      3 Template:PropertyView
-  8.95%    5.495      2 Template:Navigation_menu_2
-  8.59%    5.278      1 Template:Userdocnavi/cs
-  8.30%    5.101     96 Template:MenuCommand
-  7.60%    4.671      1 Template:Value
-  5.03%    3.087      3 Template:Variable
-  5.00%    3.073      2 Template:Docnav
-  4.18%    2.569     19 Template:Version
+100.00%  105.507      1 -total
+ 17.90%   18.885      1 Template:Sketcher_Tools_navi/cs
+ 10.09%   10.643      3 Template:PropertyView
+  9.69%   10.220      2 Template:Navigation_menu_2
+  8.72%    9.196      1 Template:Userdocnavi/cs
+  8.67%    9.144      1 Template:TOCright
+  6.76%    7.136      1 Template:Value
+  6.15%    6.492     96 Template:MenuCommand
+  5.84%    6.163      4 Template:Emphasis
+  5.57%    5.873      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122144416 and revision id 1742406. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122144510 and revision id 1742410. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
