Created page with "Dopo aver cliccato su {{Button|OK}}, la macro acquisisce lo screenshot e lo salva in un file temporaneo. Viene quindi aperta una finestra di dialogo per l'apertura del file nella posizione del file. È possibile trascinare il file da lì nel forum, nell'area di testo in cui si digita il testo per il post del forum. Annullando la finestra di dialogo, il file temporaneo dello screenshot viene eliminato automaticamente. È anche possibile aprire il file dello screenshot nel..."

--- a/wiki/it/Macro_Snip.html
+++ b/wiki/it/Macro_Snip.html
@@ -90,11 +90,8 @@ Su Linux: gnone-screenshot utility<br>
 </p><p><span typeof="mw:File"><a href="../index.php?title=Snip-Screenshot1.png&amp;filetimestamp=20190804000200&amp;.html" class="mw-file-description"><img src="../File/Snip-Screenshot1.png" decoding="async" width="600" height="331" class="mw-file-element" data-file-width="1631" data-file-height="899"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Notare come la finestra di dialogo sia semitrasparente. Verr&agrave; catturato solo il contenuto dello schermo sotto la finestra di dialogo.</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>After clicking <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>, the macro then takes the screenshot and saves it to a temporary file. A file open dialog is then opened at the file's location. You can drag and drop the file from there to the forum into the textarea where you type in your text for your forum post. Upon canceling the dialog the temporary screenshot file is deleted automatically. You may also open the screenshot file in your default application installed for opening <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.png</span> files (on Windows this is typically Paint). This can be useful if you wish to add some annotations to the screenshot or perhaps additional editing, such as cropping.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Snip-Screenshot2.png&amp;filetimestamp=20190804000814&amp;.html" class="mw-file-description"><img src="../File/Snip-Screenshot2.png" decoding="async" width="600" height="389" class="mw-file-element" data-file-width="1149" data-file-height="744"></a></span>
+<p>Dopo aver cliccato su <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>, la macro acquisisce lo screenshot e lo salva in un file temporaneo. Viene quindi aperta una finestra di dialogo per l'apertura del file nella posizione del file. &Egrave; possibile trascinare il file da l&igrave; nel forum, nell'area di testo in cui si digita il testo per il post del forum. Annullando la finestra di dialogo, il file temporaneo dello screenshot viene eliminato automaticamente. &Egrave; anche possibile aprire il file dello screenshot nell'applicazione predefinita installata per l'apertura di file <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.png</span> (in Windows in genere &egrave; Paint). Questo pu&ograve; essere utile se si desidera aggiungere annotazioni allo screenshot o apportare modifiche aggiuntive, come il ritaglio.
+</p><p><span typeof="mw:File"><a href="../index.php?title=Snip-Screenshot2.png&amp;filetimestamp=20190804000814&amp;.html" class="mw-file-description"><img src="../File/Snip-Screenshot2.png" decoding="async" width="600" height="389" class="mw-file-element" data-file-width="1149" data-file-height="744"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">This is the open file dialog that pops up automatically after taking the screenshot. The image can be dragged and dropped to the forum or it can be opened for further processing in your system default application for opening png files. Alternatively, you can right-click on the image and <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Open with..</span> another application of your choice.</p>
@@ -556,13 +553,13 @@ if not userCanceled:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122144425
+Cached time: 20260122144516
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.086 seconds
-Preprocessor visited node count: 293/1000000
+CPU time usage: 0.068 seconds
+Real time usage: 0.125 seconds
+Preprocessor visited node count: 292/1000000
 Post&#8208;expand include size: 8491/2097152 bytes
 Template argument size: 18996/2097152 bytes
 Highest expansion depth: 6/100
@@ -572,18 +569,18 @@ Unstrip post&#8208;expand size: 18824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.960      1 -total
- 26.33%    4.466      1 Template:Macro/it
- 13.37%    2.267      1 Template:MacroCode
- 10.70%    1.815      7 Template:KEY
-  9.28%    1.574      1 Template:FileName
-  8.74%    1.483      2 Template:Caption
-  8.36%    1.418     13 Template:Incode
-  7.41%    1.257      3 Template:Button
-  7.18%    1.218      1 Template:MenuCommand
+100.00%   23.638      1 -total
+ 23.56%    5.570      1 Template:Macro/it
+ 13.95%    3.298      1 Template:MacroCode
+ 11.18%    2.642      2 Template:Caption
+ 10.67%    2.523      7 Template:KEY
+  9.97%    2.357      3 Template:Button
+  9.92%    2.345     13 Template:Incode
+  6.79%    1.606      1 Template:FileName
+  6.03%    1.425      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144425 and revision id 1742408. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169835-0!canonical and timestamp 20260122144516 and revision id 1742412. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
