Created page with "|- | {{MenuCommand|Režim průměr/poloměr nástroje pro rozměr}} {{Version|1.0}} | Specifikuje, jak kombinovaný [[Sketcher_Dimension|nástroj Rozměry]] zachází s kruhy a oblouky. Zakázáno, pokud je předchozí předvolba nastavena na {{MenuCommand|Samostatné nástroje}}. Možnosti jsou: * {{MenuCommand|Automaticky}}: Nejprve použijte rozměr poloměru na oblouky a rozměr průměru na kruhy. Před výběrem bodu, který určí pozici rozměru, je možné přep..."

--- a/wiki/cs/Sketcher_Preferences.html
+++ b/wiki/cs/Sketcher_Preferences.html
@@ -108,12 +108,12 @@
 </p>
 </td></tr>
 <tr>
-<td><b>Dimension tool diameter/radius mode</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
+<td><b>Re&#382;im pr&#367;m&#283;r/polom&#283;r n&aacute;stroje pro rozm&#283;r</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
-<td>Specifies how the combined <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">Dimension tool</a> handles circles and arcs. Disabled if the previous preference is set to <b>Separated tools</b>. The options are:
-<ul><li><b>Auto</b>: First apply a radius dimension to arcs and a diameter dimension to circles. Before picking the point that will position the dimension, it is possible to switch with the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">M</span> key.</li>
-<li><b>Diameter</b>: Always first apply a diameter dimension. Idem.</li>
-<li><b>Radius</b>: Always first apply a radius dimension. Idem.</li></ul>
+<td>Specifikuje, jak kombinovan&yacute; <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">n&aacute;stroj Rozm&#283;ry</a> zach&aacute;z&iacute; s kruhy a oblouky. Zak&aacute;z&aacute;no, pokud je p&#345;edchoz&iacute; p&#345;edvolba nastavena na <b>Samostatn&eacute; n&aacute;stroje</b>. Mo&#382;nosti jsou:
+<ul><li><b>Automaticky</b>: Nejprve pou&#382;ijte rozm&#283;r polom&#283;ru na oblouky a rozm&#283;r pr&#367;m&#283;ru na kruhy. P&#345;ed v&yacute;b&#283;rem bodu, kter&yacute; ur&#269;&iacute; pozici rozm&#283;ru, je mo&#382;n&eacute; p&#345;epnout pomoc&iacute; kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">M</span>.</li>
+<li><b>Pr&#367;m&#283;r</b>: V&#382;dy nejprve aplikujte rozm&#283;r pr&#367;m&#283;ru. Idem.</li>
+<li><b>Polom&#283;r</b>: V&#382;dy nejprve aplikujte rozm&#283;r polom&#283;ru. Idem.</li></ul>
 </td></tr>
 <tr>
 <td><b>Scale upon first constraint</b> <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
@@ -437,15 +437,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122150843
+Cached time: 20260122151437
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.205 seconds
+CPU time usage: 0.156 seconds
+Real time usage: 0.230 seconds
 Preprocessor visited node count: 1224/1000000
-Post&#8208;expand include size: 30029/2097152 bytes
-Template argument size: 11599/2097152 bytes
+Post&#8208;expand include size: 30055/2097152 bytes
+Template argument size: 11625/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -453,19 +453,19 @@ Unstrip post&#8208;expand size: 2249/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.477      1 -total
- 15.61%    8.193      1 Template:Sketcher_Tools_navi/cs
- 14.74%    7.735      3 Template:KEY
- 10.58%    5.550      3 Template:PropertyView
-  9.18%    4.816      1 Template:Userdocnavi/cs
-  8.51%    4.468      2 Template:Navigation_menu_2
-  6.74%    3.536     96 Template:MenuCommand
-  6.11%    3.206      3 Template:Variable
-  5.35%    2.807      1 Template:VersionMinus
-  4.63%    2.431      1 Template:Value
+100.00%   56.912      1 -total
+ 19.99%   11.375      1 Template:Sketcher_Tools_navi/cs
+ 10.58%    6.019      2 Template:Navigation_menu_2
+ 10.25%    5.831      3 Template:PropertyView
+  9.08%    5.170     96 Template:MenuCommand
+  8.73%    4.966      1 Template:Value
+  8.58%    4.881      1 Template:Userdocnavi/cs
+  4.76%    2.708      2 Template:Caption
+  4.67%    2.659      3 Template:Variable
+  4.48%    2.548     19 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122150842 and revision id 1742436. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412213-0!canonical and timestamp 20260122151437 and revision id 1742440. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
